--- a/Valentine Website/Valentine/VGLAE/Music/music.html
+++ b/Valentine Website/Valentine/VGLAE/Music/music.html
@@ -5,12 +5,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Music Player</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <link rel="stylesheet" href="music.css">
+        <link rel="stylesheet" href="music design/music.css">
     </head>
     <body>
         <!-- <audio controls src="./jingle-bells.mp3"></audio> -->
         <div id="music-player">
-            <img id="song-image" src="./album-art1.jpg"/>
+            <img id="song-image" src="./img1.jpg"/>
             <div id="song-name">Song</div>
             <div id="song-artist">Artist</div>
 
@@ -24,6 +24,6 @@
                 <i id="repeat-song" class="fa-solid fa-repeat"></i>                
             </div>
         </div>
-        <script src="music.js"></script>
+        <script src="music function/music.js"></script>
     </body>
 </html>
