--- a/main.html
+++ b/main.html
@@ -6,11 +6,6 @@
     <title>Valentine Gift Website</title>
 
     <link rel="stylesheet" href="main.css">
-
-    <link rel="stylesheet" href="https://pyscript.net/releases/2026.2.1/core.css" />
-    <script type="module" src="https://pyscript.net/releases/2026.2.1/core.js"></script>
-
-
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&family=Permanent+Marker&display=swap" rel="stylesheet">
 </head>
@@ -33,15 +28,12 @@
             <div class="hero-buttons">
                 <a href="Valentine Website/Valentine/VGLAE/Games/game.html">🎮 GAME</a>
                 <a href="Valentine Website/Valentine/valentine.html">📝 POETRY</a>
-                <a href="#">🎵 MUSIC</a>
+                <a href="Valentine Website/Valentine/VGLAE/Music/music.html">🎵 MUSIC</a>
             </div>
         </div>
 
 
     </section>
-        <py-script>
-            print("Hello World!")
-        </py-script>
 
 </body>
 </html>
