--- a/Valentine Website/Valentine/VGLAE/Games/mainGame.html
+++ b/Valentine Website/Valentine/VGLAE/Games/mainGame.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="mainGame.css">
 </head>
 <body>
+    <h1>Welcome, Cutie in the gaming section</h1>
+    <p>I hope you enjoy this three games! :></p>
+    <h3>Choose what game you want to play: </h3>
     <a href="Game 1/game.html">Finding Hearts</a>
     <a href="Game 2/game2.html">Quiz Game</a>
     <a href="Game 3/game3.html">Unknown</a>
+    <a href="../../../../main.html">Back to Home</a>
 </body>
 </html>
