--- a/main.html
+++ b/main.html
@@ -6,11 +6,13 @@
     <title>Valentine Gift Website</title>
 
     <link rel="stylesheet" href="main.css">
+
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&family=Permanent+Marker&display=swap" rel="stylesheet">
 </head>
 <body>
 
+    <!-- HERO SECTION -->
     <section class="hero">
         <!-- HEART BACKGROUND -->
         <div class="heart-bg"></div>
@@ -24,16 +26,31 @@
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit.
                 Omnis quod necessitatibus repellendus modi dolorum ullam!
             </p>
-
-            <div class="hero-buttons">
-                <a href="Valentine Website/Valentine/VGLAE/Games/mainGame.html">🎮 GAME</a>
-                <a href="Valentine Website/Valentine/valentine.html">📝 POETRY</a>
-                <a href="Valentine Website/Valentine/VGLAE/Music/music.html">🎵 MUSIC</a>
-            </div>
         </div>
+        <!-- CONTENT SECTIONS IN ONE ROW -->
+         <!-- CONTENT SECTIONS IN 1 ROW -->
+<div class="content-row">
+    <div class="content game">
+        <h1>💖 Games Section</h1>
+        <p>Enjoy this fun little game!</p>
+        <a href="Valentine Website/Valentine/VGLAE/Games/mainGame.html">Games</a>
+    </div>
 
+    <div class="content poetry">
+        <h1>💌 Poetry Section</h1>
+        <p>Read some romantic poems</p>
+        <a href="Valentine Website/Valentine/valentine.html">Poetry</a>
+    </div>
+
+    <div class="content music">
+        <h1>🎵 Music Section</h1>
+        <p>Listen to love songs</p>
+        <a href="Valentine Website/Valentine/VGLAE/Music/music.html">Music</a>
+    </div>
+</div>
 
     </section>
+
 
 </body>
 </html>
