--- a/Valentine Website/Valentine/VGLAE/Games/mainGame.html
+++ b/Valentine Website/Valentine/VGLAE/Games/mainGame.html
@@ -7,12 +7,20 @@
     <link rel="stylesheet" href="mainGame.css">
 </head>
 <body>
-    <h1>Welcome, Cutie in the gaming section</h1>
-    <p>I hope you enjoy this three games! :></p>
-    <h3>Choose what game you want to play: </h3>
-    <a href="Game 1/game.html">Finding Hearts</a>
-    <a href="Game 2/game2.html">Quiz Game</a>
-    <a href="Game 3/game3.html">Unknown</a>
-    <a href="../../../../main.html">Back to Home</a>
+    <div class="heart-bg"></div>
+
+    <div class="content">
+        <h1>Welcome, Cutie 💕</h1>
+        <p>I hope you enjoy these three games! :></p>
+        <h3>Choose what game you want to play:</h3>
+
+        <a href="Game 1/game.html">💖 Finding Hearts</a>
+        <a href="Game 2/game2.html">💘 Quiz Game</a>
+        <a href="Game 3/game3.html">💝 Match Game</a>
+        <a href="../../../../main.html">⬅ Back to Home</a>
+    </div>
+
+    <script src="mainGame.js"></script>
 </body>
+
 </html>
