--- a/Valentine Website/Valentine/VGLAE/Games/Game 1/game.html
+++ b/Valentine Website/Valentine/VGLAE/Games/Game 1/game.html
@@ -55,6 +55,12 @@
     </div>
 </div>
 
+<img src="../../../../Pictures/tulipsBG.jpg" alt="Tulips Background. Your favorite flower!" class="background-img">
+
+    <audio id="envelope-music" preload="auto">
+        <source src="Music In Letters/Valentine.mp3" type="audio/mpeg">
+    </audio>
+
     <script src="Game Function/addScore.js"></script>
     <script src="Game Function/initializeGame.js"></script>
     <script src="Game Function/revealSecretLetter.js"></script>
