--- a/Valentine Website/Valentine/VGLAE/Games/Game 1/game.html
+++ b/Valentine Website/Valentine/VGLAE/Games/Game 1/game.html
@@ -55,7 +55,7 @@
     </div>
 </div>
 
-<img src="../../../../Pictures/tulipsBG.jpg" alt="Tulips Background. Your favorite flower!" class="background-img">
+<img src="../../../../Pictures/Valentine.jpg" alt="Tulips Background. Your favorite flower!" class="background-img">
 
     <audio id="envelope-music" preload="auto">
         <source src="Music In Letters/Valentine.mp3" type="audio/mpeg">
