--- a/main.html
+++ b/main.html
@@ -32,7 +32,7 @@
 <div class="content-row">
     <div class="content game">
         <h1>💖 Games Section</h1>
-        <p>Enjoy this fun little game!</p>
+        <p>Enjoy this fun little games!</p>
         <a href="Valentine Website/Valentine/VGLAE/Games/mainGame.html">Games</a>
     </div>
 
@@ -44,7 +44,7 @@
 
     <div class="content music">
         <h1>🎵 Music Section</h1>
-        <p>Listen to love songs</p>
+        <p>Some Of Your Favorite Songs</p>
         <a href="Valentine Website/Valentine/VGLAE/Music/music.html">Music</a>
     </div>
 </div>
