--- a/Valentine Website/Valentine/VGLAE/Games/Game 1/game.html
+++ b/Valentine Website/Valentine/VGLAE/Games/Game 1/game.html
@@ -37,7 +37,7 @@
         <!-- Buttons INSIDE envelope -->
         <div class="envelope-buttons">
             <button id="open">Open</button>
-            <a href="../../../../../main.html">Back</a>
+            <a href="../mainGame.html">Back</a>
         </div>
     </div>
 </div>
