--- a/Valentine Website/Valentine/VGLAE/Games/mainGame.html
+++ b/Valentine Website/Valentine/VGLAE/Games/mainGame.html
@@ -9,16 +9,33 @@
 <body>
     <div class="heart-bg"></div>
 
-    <div class="content">
-        <h1>Welcome, Cutie 💕</h1>
-        <p>I hope you enjoy these three games! :></p>
-        <h3>Choose what game you want to play:</h3>
+<div class="main-content">
+  <h1>Welcome, Cutie 💕</h1>
+  <p>I hope you enjoy these three games! :></p>
+  <h3>Choose what game you want to play:</h3>
 
-        <a href="Game 1/game.html">💖 Finding Hearts</a>
-        <a href="Game 2/game2.html">💘 Quiz Game</a>
-        <a href="Game 3/game3.html">💝 Match Game</a>
-        <a href="../../../../main.html">⬅ Back to Home</a>
+  <div class="content-row">
+    <div class="content game">
+      <h1>💖 Finding Hearts</h1>
+      <p>Find all the hidden hearts!</p>
+      <a href="Game 1/game.html">Play</a>
     </div>
+
+    <div class="content quiz">
+      <h1>💘 Quiz Game</h1>
+      <p>Answer love-themed questions</p>
+      <a href="Game 2/game2.html">Play</a>
+    </div>
+
+    <div class="content match">
+      <h1>💝 Match Game</h1>
+      <p>Match pairs and win!</p>
+      <a href="Game 3/game3.html">Play</a>
+    </div>
+  </div>
+
+  <a class="back-home" href="../../../../main.html">⬅ Back to Home</a>
+</div>
 
     <script src="mainGame.js"></script>
 </body>
