--- a/Valentine Website/Valentine/VGLAE/Games/mainGame.html
+++ b/Valentine Website/Valentine/VGLAE/Games/mainGame.html
@@ -11,26 +11,20 @@
 
 <div class="main-content">
   <h1>Welcome, Cutie 💕</h1>
-  <p>I hope you enjoy these three games! :></p>
+  <p>I hope you enjoy these two games! :></p>
   <h3>Choose what game you want to play:</h3>
 
   <div class="content-row">
     <div class="content game">
       <h1>💖 Finding Hearts</h1>
-      <p>Find all the hidden hearts!</p>
+      <p>Find my heart within the card to get the surprise!</p>
       <a href="Game 1/game.html">Play</a>
     </div>
 
     <div class="content quiz">
       <h1>💘 Quiz Game</h1>
-      <p>Answer love-themed questions</p>
+      <p>Pump my heart and don't let it fades!</p>
       <a href="Game 2/game2.html">Play</a>
-    </div>
-
-    <div class="content match">
-      <h1>💝 Match Game</h1>
-      <p>Match pairs and win!</p>
-      <a href="Game 3/game3.html">Play</a>
     </div>
   </div>
 
