--- a/Valentine Website/Valentine/VGLAE/Music/music.html
+++ b/Valentine Website/Valentine/VGLAE/Music/music.html
@@ -23,7 +23,11 @@
                 <i id="next-song" class="fa-solid fa-forward-step fa-2x"></i>
                 <i id="repeat-song" class="fa-solid fa-repeat"></i>                
             </div>
+                    <div class="backBtn">
+            <a href="../../../../main.html">Back</a>
         </div>
+        </div>
+
         <script src="music function/music.js"></script>
     </body>
 </html>
