--- a/Valentine Website/Valentine/VGLAE/Letters/letter1.html
+++ b/Valentine Website/Valentine/VGLAE/Letters/letter1.html
@@ -6,6 +6,7 @@
     <title>Letter 1</title>
 
     <!--Links-->
+    <link rel="stylesheet" href="Letters Design/letter1.css">
     <link rel="stylesheet" href="Letters Design/lettermain.CSS">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
