--- a/Valentine Website/Valentine/VGLAE/Letters/letter1.html
+++ b/Valentine Website/Valentine/VGLAE/Letters/letter1.html
@@ -21,7 +21,7 @@
             <div class="seal_flap two"></div>
             <div class="envelope"></div>
             <div class="letter">
-                <h1>How Beautiful The Night Is</h1>
+                <h1>Poetry 1</h1>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque accusantium quaerat accusamus adipisci?</p>
 
             </div>
