--- a/Valentine Website/Valentine/VGLAE/Letters/letter4.html
+++ b/Valentine Website/Valentine/VGLAE/Letters/letter4.html
@@ -30,6 +30,11 @@
             <button id="open4">Open Letter</button>
             <button id="close4">Close Letter</button>
         </div>
+        <div class="back">
+            <a href="../../valentine.html">
+                <button id="back">Back to Home</button>
+            </a>
+        </div>
     </div>
         <div class="hearts">
         <div class="heart a1"></div>
