--- a/Valentine Website/Valentine/VGLAE/Letters/letter5.html
+++ b/Valentine Website/Valentine/VGLAE/Letters/letter5.html
@@ -6,7 +6,7 @@
     <title>Letter 1</title>
 
     <!--Links-->
-    <link rel="stylesheet" href="letter5.html">
+    <link rel="stylesheet" href="Letters Design/letter5.css">
     <link rel="stylesheet" href="Letters Design/lettermain.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -29,6 +29,11 @@
         <div class="btn">
             <button id="open5">Open Letter</button>
             <button id="close5">Close Letter</button>
+        </div>
+        <div class="back">
+            <a href="../../valentine.html">
+                <button id="back">Back to Home</button>
+            </a>
         </div>
     </div>
         <div class="hearts">
