--- a/Valentine Website/Valentine/valentine.html
+++ b/Valentine Website/Valentine/valentine.html
@@ -12,10 +12,10 @@
     <h1>POETRY</h1>
     <p>Creating poetry becomes my hobby now, thanks to you ;></p>
     <a href="VGLAE/Letters/letter1.html">Poetry 1</a>
-    <a href="VGLAE/Letters/letter2.html">Letter 2</a>
-    <a href="VGLAE/Letters/letter3.html">Letter 3</a>
-    <a href="VGLAE/Letters/letter4.html">Letter 4</a>
-    <a href="VGLAE/Letters/letter5.html">Letter 5</a>
+    <a href="VGLAE/Letters/letter2.html">Poetry 2</a>
+    <a href="VGLAE/Letters/letter3.html">Poetry 3</a>
+    <a href="VGLAE/Letters/letter4.html">Poetry 4</a>
+    <a href="VGLAE/Letters/letter5.html">Poetry 5</a>
     <a href="../../main.html" id="back">Back to Home</a>
 </div>
 
